- the button wrap bug is getting annoying

--- a/annis-gui/src/main/webapp/VAADIN/themes/annis-theme/styles.css
+++ b/annis-gui/src/main/webapp/VAADIN/themes/annis-theme/styles.css
@@ -100,6 +100,7 @@ textarea.citation {
 
 .v-ff7 .v-button-wrap { overflow: visible; }
 .v-ff8 .v-button-wrap { overflow: visible; }
+.v-ff9 .v-button-wrap { overflow: visible; }
 
 /* 
  split button should have the some appearance on focus as the other buttons 
